--- a/src/Intro/Samples/expressions.html
+++ b/src/Intro/Samples/expressions.html
@@ -4,12 +4,11 @@
         <title>Angular Expressions</title>
     </head>
     <body>
-        {{2 + 2}} = <t>{</t>{2 + 2}}
+        {{2 + 2}} = <code ng-non-bindable>{{2 + 2}}</code>
         <br />
-        {{"a" + 2}} = <t>{</t>{"a" + 2}}
+        {{"a" + 2}} = <code ng-non-bindable> {{"a" + 2}} </code>
         <br />
-        {{("a" + "b") + (10/2)}} = <t>{</t>{("a" + "b") + (10/2)}}
-        
+        {{("a" + "b") + (10/2)}} = <code ng-non-bindable> {{("a" + "b") + (10/2)}} </code>
         <script src="/common/js/angular/angular.js"></script>
     </body>
 </html>
