--- a/src/Filters/Samples/FilterParameters/index.html
+++ b/src/Filters/Samples/FilterParameters/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html ng-app="filterApp">
+    <html ng-app="complexFilterApp">
      <head>
         <title>Filter App</title>
     </head>
