Adding routing exercises

--- a/src/Routing/Exercises/UIRouter/index.html
+++ b/src/Routing/Exercises/UIRouter/index.html
@@ -6,7 +6,7 @@
      <head>
         <title>Routing App</title>
     </head>
-    <body ng-controller="AppController" ui-view>
+    <body ng-controller="AppController">
          
         <script src="/common/js/angular/angular.js"></script>
         <script src="/common/js/angular-ui-router/angular-ui-router.js"></script>
