--- a/src/Routing/Exercises/UIRouterNamed/index.html
+++ b/src/Routing/Exercises/UIRouterNamed/index.html
@@ -1,5 +1,6 @@
 <!-- 
-    Need to add a basic container for your views
+    Change your view configuration to support named views 
+    for search and list
 -->
 <!DOCTYPE html>
     <html ng-app="myUIRouter">
