--- a/src/Routing/Exercises/UIRouterNamed/pages/search.html
+++ b/src/Routing/Exercises/UIRouterNamed/pages/search.html
@@ -1,16 +1,17 @@
+<!-- 
+    Fix the view by removing excess elements no longer needed by
+    switching to named views
+-->
+
 <h2>Filter By:</h2>
 <ul>
     <li>By Name: <input type="text" ng-model="filter.Name" /></li>
-    <li>By Age: <input type="number" ng-model="filter.Age" /></li>
-    <li>By Gender:  <input type="radio" ng-model="filter.Gender" name="female" id="female" value="Female" />
-                    <label for="female">Female</label>
-                    <input type="radio" ng-model="filter.Gender" name="male" id="male" value="Male" />
-                    <label for="male">Male</label></li>
+    <li>By League: <input type="number" ng-model="filter.League" /></li>
+    <li>By Division: <input type="number" ng-model="filter.Division" /></li>
 </ul>
 
-
 <h2>Order By:</h2>
-<ul>
+    <ul>
     <li>Sort On: <select name="order" ng-options="one for one in availableForSort track by one" ng-model="sortOn"></select></li>
     <li>Direction:  <input type="radio" ng-model="sortDirection" name="asc" id="asc" ng-value="false" />
                     <label for="asc">Asc</label>
@@ -20,6 +21,6 @@
 
 <a ui-sref=".list" >Search </a>
 
-<div ui-view style="border:red solid 2pt">
+<div ui-view>
     
 </div>
