--- a/src/Routing/Samples/UIRouter/index.html
+++ b/src/Routing/Samples/UIRouter/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
     <html ng-app="myUIRouter">
      <head>
-        <title>Routing App</title>
+        <title>Routing App</title>  
+        <style>
+            div { margin:5pt; padding:5pt}
+        </style>      
     </head>
     <body ng-controller="AppController" ui-view>
          
