--- a/src/Directives/Solutions/Variables/index.html
+++ b/src/Directives/Solutions/Variables/index.html
@@ -5,13 +5,11 @@
     </head>
     <body ng-controller="HomeController">
         <h1>Directives</h1>
-        <input type="text" ng-model="message" />
-        <br /><br  />
 
+        <!-- add a timer to increment the ticks -->
         <timer counter="ticks"></timer>
         
-        <h4>Result from evaluator: {{output}}</h4>
-        <h4>Expression from evaluator: {{myExpr}}</h4>
+        <h4>Elasped Time: {{ticks}}</h4>
 
         <script src="/common/js/jquery/jquery.js"></script>
         <script src="/common/js/angular/angular.js"></script>
