--- a/src/Directives/Solutions/Requires/index.html
+++ b/src/Directives/Solutions/Requires/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
     <html ng-app="myApp">
      <head>
-        <title>Transclude Directives</title>
+        <title>Require Directives</title>
         <link href="/common/css/bootstrap/bootstrap.css" type="text/css" rel="stylesheet"/>
     </head>
     <body ng-controller="HomeController">
         <h1>Directives</h1>
 
         <!-- 
-            Implement a repeater that spits out the pane directive and then create
-            a template to adequately display the team information
+            Implement a container with a repeater that spits out the pane directive 
+            and then create a template to adequately display the team information
         -->
-             
-        <div class="container-fluid">
-            <div class="row">
-                <pane header="team.Name" ng-repeat="team in teams">
+        <container>
+           <pane header="team.Name" ng-repeat="team in teams">
                     <ul>
                         <li><b>Name:</b> {{team.Name}}</li>
                         <li><b>League:</b> {{team.League}}</li>
@@ -23,9 +21,8 @@
                         <li><b>Loses:</b> {{team.Loses}}</li>
                     </ul>
                 </pane>
-            </div>
-        </div>
-
+        </container>
+        
         <script src="/common/js/jquery/jquery.js"></script>
         <script src="/common/js/angular/angular.js"></script>
         <script src="directives/directives.js"></script>
