--- a/src/Controllers/Samples/NgRepeatWithObjects/index.html
+++ b/src/Controllers/Samples/NgRepeatWithObjects/index.html
@@ -5,7 +5,7 @@
     </head>
     <body ng-controller="MainController">
         <h1>Repeaters with Objects</h1>
-        
+
         <table>
             <thead>
                 <tr>
@@ -19,6 +19,7 @@
                     <td>{{one.Name}}</td>
                     <td>{{one.Age}}</td>
                     <td>{{one.Gender}}</td>
+                    <td>{{one}}</td>
                 </tr>
             </tbody>
         </table>
