Some content changes

--- a/src/Routing/Samples/UIRouter/pages/detail.html
+++ b/src/Routing/Samples/UIRouter/pages/detail.html
@@ -10,4 +10,5 @@
 </div>
 
 <a ui-sref="^.detail({id:person.Id - 1})"> Prev </a> |
-<a ui-sref="^.detail({id:person.Id + 1})"> Next </a> | <a ui-sref="search">Reset </a>
+<a ui-sref="^.detail({id:person.Id + 1})"> Next </a> | 
+<a ui-sref="search">Reset </a>
