--- a/src/Routing/Samples/UIRouterNamed/pages/list.html
+++ b/src/Routing/Samples/UIRouterNamed/pages/list.html
@@ -1,6 +1,6 @@
 <h2>List of People</h2>
 <ul>
-    <li ng-repeat="one in people | filter:filter | orderBy:sortDirection"><a ui-sref=".detail({id:one.Id})">{{one.Name}}</a></li>
+    <li ng-repeat="one in people | filter:filter | orderBy:sortOn:sortDirection"><a ui-sref=".detail({id:one.Id})">{{one.Name}}</a></li>
 </ul>
 
 <div ui-view style="border:green solid 2pt">
