--- a/src/Forms/Samples/NgMessages/pages/detail.html
+++ b/src/Forms/Samples/NgMessages/pages/detail.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <div class="bs-callout bs-callout-danger bg-danger" ng-show="EditStates.$invalid && EditStates.$dirty"> 
+          <div class="bs-callout bs-callout-danger bg-danger" ng-show="EditStates.$invalid && EditStates.$dirty">
                 <h4>You have the following errors</h4>
                 <ul style="list-style-type:none">
                     <li ng-messages="EditStates.name.$error">
@@ -9,13 +9,14 @@
                     </li>
                     <li ng-messages="EditStates.abbreviation.$error">
                         <div ng-message="required">State Abbreviation is required</div>
+                        <div ng-message="pattern">State Abbreviation must only contain letters</div>
                         <div ng-message="minlength">State Abbreviation can be no shorter than 2 chars</div>
                         <div ng-message="maxlength">State Abbreviation can be no longer than 2 chars</div>
                     </li>
                 </ul>
             </div>
-              
-            <h2>Fill in the Form Below</h2>  
+
+            <h2>Fill in the Form Below</h2>
             <form name="EditStates" novalidate>
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -23,7 +24,7 @@
                 </div>
                 <div class="form-group">
                     <label for="abbreviation">Abbreviation</label>
-                    <input type="text" class="form-control" name="abbreviation" placeholder="State Abbreviation" ng-model="state.abbreviation" required ng-maxlength="2" ng-minlength="2"/>
+                    <input type="text" class="form-control" name="abbreviation" placeholder="State Abbreviation" ng-model="state.abbreviation" required pattern="[A-Za-z]" ng-maxlength="2" ng-minlength="2"/>
                 </div>
                 <div class="form-group">
                     <label for="capital">Capital</label>
