--- a/src/Forms/Samples/Validation/index.html
+++ b/src/Forms/Samples/Validation/index.html
@@ -15,6 +15,8 @@
         <script src="/common/js/angular/angular.js"></script>
         <script src="/common/js/angular-route/angular-route.js"></script>
         <script src="/common/js/angular-resource/angular-resource.js"></script>
+        
+        <script src="/common/helpers/directives/angularJsClass.directives.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/factories.js"></script>
         <script src="js/services.js"></script>
