--- a/src/Forms/Samples/Validation/pages/detail.html
+++ b/src/Forms/Samples/Validation/pages/detail.html
@@ -1,5 +1,6 @@
-<div class="container">
+ <form-state form="EditStates"></form-state>
 
+<div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <h2>Fill in the Form Below</h2>
@@ -58,4 +59,6 @@
             </form>
         </div>
     </div>
+    
+   
 </div>
