--- a/src/Forms/Solutions/Validation/pages/detail.html
+++ b/src/Forms/Solutions/Validation/pages/detail.html
@@ -23,45 +23,45 @@
             <form name="EditProducts" novalidate>
                 <div class="form-group">
                     <label for="name">Product ID</label>
-                    <input type="number" class="form-control" id="productID" placeholder="Product ID" ng-model="product.productID" required />
+                    <input type="number" class="form-control" name="productID" placeholder="Product ID" ng-model="product.productID" required />
                 </div>
                 <div class="form-group">
                     <label for="productName">Product Name</label>
-                    <input type="text" class="form-control" id="productName" placeholder="Product Name" ng-model="product.productName" required />
+                    <input type="text" class="form-control" name="productName" placeholder="Product Name" ng-model="product.productName" required />
                 </div>
                 <div class="form-group">
                     <label for="supplierID">Supplier ID</label>
-                    <input type="number" class="form-control" id="supplierID" placeholder="Supplier ID" ng-model="product.supplierID" required />
+                    <input type="number" class="form-control" name="supplierID" placeholder="Supplier ID" ng-model="product.supplierID" required />
                 </div>
                 <div class="form-group">
                     <label for="quantityPerUnit">Quantity Per Unit</label>
-                    <input type="text" class="form-control" id="quantityPerUnit" placeholder="Quantity Per Unit" ng-model="product.quantityPerUnit" required />
+                    <input type="text" class="form-control" name="quantityPerUnit" placeholder="Quantity Per Unit" ng-model="product.quantityPerUnit" required />
                 </div>
                 <div class="form-group">
                     <label for="unitPrice">Unit Price</label>
-                    <input type="number" class="form-control" id="unitPrice" placeholder="Unit Price" ng-model="product.unitPrice" required />
+                    <input type="number" class="form-control" name="unitPrice" placeholder="Unit Price" ng-model="product.unitPrice" required />
                 </div>
                 <div class="form-group">
                     <label for="unitsInStock">Units In Stock</label>
-                    <input type="number" class="form-control" id="unitsInStock" placeholder="Units In Stock" ng-model="product.unitsInStock" required />
+                    <input type="number" class="form-control" name="unitsInStock" placeholder="Units In Stock" ng-model="product.unitsInStock" required />
                 </div>
                 <div class="form-group">
                     <label for="unitsOnOrder">Units On Order</label>
-                    <input type="number" class="form-control" id="unitsOnOrder" placeholder="Units On Order" ng-model="product.unitsOnOrder" required/>
+                    <input type="number" class="form-control" name="unitsOnOrder" placeholder="Units On Order" ng-model="product.unitsOnOrder" required/>
                 </div>
                 <div class="form-group">
                     <label for="reorderLevel">Reorder Level</label>
-                    <input type="number" class="form-control" id="reorderLevel" placeholder="Reorder Level" ng-model="product.reorderLevel" required/>
+                    <input type="number" class="form-control" name="reorderLevel" placeholder="Reorder Level" ng-model="product.reorderLevel" required/>
                 </div>
                 <div class="radio">
                 <label>
-                    <input type="radio" name="discontinued" id="isDiscontinued" value="true" ng-model="product.discontinued" />
+                    <input type="radio" name="discontinued" name="isDiscontinued" value="true" ng-model="product.discontinued" />
                     This product has been discontinued
                 </label>
                 </div>
                 <div class="radio">
                 <label>
-                    <input type="radio" name="discontinued" id="isNotDiscontinued" value="false" ng-model="product.discontinued" checked />
+                    <input type="radio" name="discontinued" name="isNotDiscontinued" value="false" ng-model="product.discontinued" checked />
                     This product is stil active
                 </label>
                 </div>
