Fixed some exercises

--- a/src/Directives/Samples/Requires/index.html
+++ b/src/Directives/Samples/Requires/index.html
@@ -17,6 +17,14 @@
             </pane>
         </container>
         
+        <pane header="person.Name" ng-repeat="person in people">
+                <ul>
+                    <li><b>Name:</b> {{person.Name}}</li>
+                    <li><b>Age:</b> {{person.Age}}</li>
+                    <li><b>Gender:</b> {{person.Gender}}</li>
+                </ul>
+        </pane>
+        
         <script src="/common/js/jquery/jquery.js"></script>
         <script src="/common/js/angular/angular.js"></script>
         <script src="directives/directives.js"></script>
