--- a/src/Directives/Samples/Validators/index.html
+++ b/src/Directives/Samples/Validators/index.html
@@ -16,6 +16,8 @@
         <script src="/common/js/angular-route/angular-route.js"></script>
         <script src="/common/js/angular-resource/angular-resource.js"></script>
         <script src="/common/js/angular-messages/angular-messages.js"></script>
+        
+        <script src="/common/helpers/directives/angularJsClass.directives.js"></script>
         <script src="js/directives.js"></script>
         <script src="js/controllers.js"></script>
         <script src="js/factories.js"></script>
