--- a/src/Directives/Samples/Validators/pages/detail.html
+++ b/src/Directives/Samples/Validators/pages/detail.html
@@ -1,3 +1,5 @@
+<form-state form="EditStates"></form-state>
+
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
