--- a/src/Filters/Samples/ReusableFilter/index.html
+++ b/src/Filters/Samples/ReusableFilter/index.html
@@ -26,7 +26,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="one in people | filter:filter">
+                <tr ng-repeat="one in people | filter:filter | overTheHill">
                     <td>{{one.Name}}</td>
                     <td>{{one.Age}}</td>
                     <td>{{one.Gender}}</td>
