--- a/src/Forms/Samples/ModelOptions/pages/detail.html
+++ b/src/Forms/Samples/ModelOptions/pages/detail.html
@@ -6,19 +6,23 @@
             <form novalidate>
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" placeholder="State Name" ng-model="state.name" ng-model-options="{debounce:1000}"/>
+                    <input type="text" class="form-control" id="name" placeholder="State Name" ng-model="state.name" ng-model-options="{debounce:1000}"/>                    
+                    <p style="color:green"><b>Model Value: </b>{{state.name}}</p>
                 </div>
                 <div class="form-group">
                     <label for="abbreviation">Abbreviation</label>
                     <input type="text" class="form-control" id="name" placeholder="State Abbreviation" ng-model="state.abbreviation" ng-model-options="{updateOn:'change'}" />
+                    <p style="color:green"><b>Model Value: </b>{{state.abbreviation}}</p>
                 </div>
                 <div class="form-group">
                     <label for="capital">Capital</label>
-                    <input type="text" class="form-control" id="capital" placeholder="Capital" ng-model="state.capital" />
+                    <input type="text" class="form-control" id="capital" placeholder="Capital" ng-model="state.capital" ng-model-options="{updateOn:'blur', debounce:1000}"/>
+                     <p style="color:green"><b>Model Value: </b>{{state.capital}}</p>
                 </div>
                 <div class="form-group">
                     <label for="mostPopulousCity">Most Populous City</label>
                     <input type="text" class="form-control" id="mostPopulousCity" placeholder="Most Populous City" ng-model="state.mostPopulousCity" />
+                    <p style="color:green"><b>Model Value: </b>{{state.mostPopulousCity}}</p>
                 </div>
                 <div class="form-group">
                     <label for="population">Population</label>
