--- a/src/Forms/Solutions/NgMessages/index.html
+++ b/src/Forms/Solutions/NgMessages/index.html
@@ -3,6 +3,7 @@
      <head>
         <title>Product App</title>
         <link href="/common/css/bootstrap/bootstrap.css" type="text/css" rel="stylesheet"/>
+        <link href="/common/css/bootstrap/bootstrap.callouts.css" type="text/css" rel="stylesheet"/>
         <style>
             input.ng-invalid.ng-dirty {
                 border-color: red;
