--- a/src/Forms/Solutions/Validation/pages/detail.html
+++ b/src/Forms/Solutions/Validation/pages/detail.html
@@ -31,41 +31,45 @@
                 </div>
                 <div class="form-group">
                     <label for="supplierID">Supplier ID</label>
-                    <input type="number" class="form-control" name="supplierID" placeholder="Supplier ID" ng-model="product.supplierID" required />
+                    <input type="number" class="form-control" name="supplierID" placeholder="Supplier ID" ng-model="product.supplierID" />
+                </div>
+                <div class="form-group">
+                    <label for="categoryID">Supplier ID</label>
+                    <input type="number" class="form-control" name="categoryID" placeholder="Category ID" ng-model="product.categoryID" />
                 </div>
                 <div class="form-group">
                     <label for="quantityPerUnit">Quantity Per Unit</label>
-                    <input type="text" class="form-control" name="quantityPerUnit" placeholder="Quantity Per Unit" ng-model="product.quantityPerUnit" required />
+                    <input type="text" class="form-control" name="quantityPerUnit" placeholder="Quantity Per Unit" ng-model="product.quantityPerUnit" />
                 </div>
                 <div class="form-group">
                     <label for="unitPrice">Unit Price</label>
-                    <input type="number" class="form-control" name="unitPrice" placeholder="Unit Price" ng-model="product.unitPrice" required />
+                    <input type="number" class="form-control" name="unitPrice" placeholder="Unit Price" ng-model="product.unitPrice" />
                 </div>
                 <div class="form-group">
                     <label for="unitsInStock">Units In Stock</label>
-                    <input type="number" class="form-control" name="unitsInStock" placeholder="Units In Stock" ng-model="product.unitsInStock" required />
+                    <input type="number" class="form-control" name="unitsInStock" placeholder="Units In Stock" ng-model="product.unitsInStock" />
                 </div>
                 <div class="form-group">
                     <label for="unitsOnOrder">Units On Order</label>
-                    <input type="number" class="form-control" name="unitsOnOrder" placeholder="Units On Order" ng-model="product.unitsOnOrder" required/>
+                    <input type="number" class="form-control" name="unitsOnOrder" placeholder="Units On Order" ng-model="product.unitsOnOrder"/>
                 </div>
                 <div class="form-group">
                     <label for="reorderLevel">Reorder Level</label>
-                    <input type="number" class="form-control" name="reorderLevel" placeholder="Reorder Level" ng-model="product.reorderLevel" required/>
+                    <input type="number" class="form-control" name="reorderLevel" placeholder="Reorder Level" ng-model="product.reorderLevel"/>
                 </div>
                 <div class="radio">
                 <label>
-                    <input type="radio" name="discontinued" name="isDiscontinued" value="true" ng-model="product.discontinued" />
+                    <input type="radio" name="discontinued" name="isDiscontinued" ng-value="true" ng-model="product.discontinued" />
                     This product has been discontinued
                 </label>
                 </div>
                 <div class="radio">
                 <label>
-                    <input type="radio" name="discontinued" name="isNotDiscontinued" value="false" ng-model="product.discontinued" checked />
+                    <input type="radio" name="discontinued" name="isNotDiscontinued" ng-value="false" ng-model="product.discontinued" checked />
                     This product is stil active
                 </label>
                 </div>
-                <button type="submit" class="btn btn-primary pull-right" ng-click="save()" ng-disabled="EditProducts.$invalid">Submit</button>
+                <button type="submit" class="btn btn-primary pull-right" ng-submit ng-click="save()" ng-disabled="EditProducts.$invalid">Submit</button>
                 <button type="submit" class="btn btn-danger" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
                  <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
             </form>
