Changes to the Samples

--- a/src/Directives/Samples/Validators/pages/detail.html
+++ b/src/Directives/Samples/Validators/pages/detail.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-          <div class="bs-callout bs-callout-danger bg-danger" ng-show="EditStates.$invalid && EditStates.$dirty"> 
+          <div class="bs-callout bs-callout-danger" ng-show="EditStates.$invalid && EditStates.$submitted"> 
                 <h4>You have the following errors</h4>
                 <ul style="list-style-type:none">
                     <li ng-messages="EditStates.name.$error">
@@ -19,6 +19,21 @@
                         <div ng-message="required">Square Miles is required</div>
                         <div ng-message="number">Square Miles should be a positive number</div>
                         <div ng-message="range">Square Miles should be between 200000 and 100</div>
+                    </li>
+                    <li ng-messages="EditStates.mostPopulousCity.$error">
+                        <div ng-message="required">Most Populous City is required</div>
+                    </li>
+                    <li ng-messages="EditStates.population.$error">
+                        <div ng-message="required">Population is required</div>
+                        <div ng-message="number">Population must be a positive number</div>
+                    </li>
+                    <li ng-messages="EditStates.timeZone1.$error">
+                        <div ng-message="required">Time Zone 1 is required</div>
+                    </li>
+                    <li ng-messages="EditStates.countryCode.$error">
+                        <div ng-message="required">Country Code is required</div>
+                        <div ng-message="minlength">Country Code can be no shorter than 3 chars</div>
+                        <div ng-message="maxlength">Country Code can be no longer than 3 chars</div>
                     </li>
                 </ul>
             </div>
@@ -73,7 +88,7 @@
                     Does Not Observe DST
                 </label>
                 </div>
-                <button type="submit" class="btn btn-primary pull-right" ng-click="save()" ng-disabled="EditStates.$invalid">Submit</button>
+                <button type="submit" class="btn btn-primary pull-right" ng-submit ng-click="save()" ng-disabled="EditStates.$submitted && EditStates.$invalid">Submit</button>
                 <button type="submit" class="btn btn-danger" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
                  <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
             </form>
