--- a/src/Forms/Solutions/NgMessages/index.html
+++ b/src/Forms/Solutions/NgMessages/index.html
@@ -7,11 +7,15 @@
         <style>
             input.ng-invalid.ng-dirty {
                 border-color: red;
-            }    
+            }
+
+            body {
+              margin-bottom: 20pt;
+            }
         </style>
     </head>
     <body ng-controller="AppController" ng-view>
-         
+
         <script src="/common/js/angular/angular.js"></script>
         <script src="/common/js/angular-route/angular-route.js"></script>
         <script src="/common/js/angular-resource/angular-resource.js"></script>
