--- a/src/Directives/Solutions/Validators/pages/detail.html
+++ b/src/Directives/Solutions/Validators/pages/detail.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">  
-            <div class="bs-callout bs-callout-danger bg-danger" ng-show="EditProducts.$invalid && EditProducts.$dirty"> 
+            <div class="bs-callout bs-callout-danger" ng-show="EditProducts.$invalid && EditProducts.$submitted"> 
                 <h4>You have the following errors</h4>
                 <ul style="list-style-type:none">
                     <li ng-messages="EditProducts.productID.$error">
@@ -14,6 +14,10 @@
                     </li>
                     <li ng-messages="EditProducts.productName.$error">
                         <div ng-message="required">Product Name is required</div>
+                    </li>
+                    <li ng-messages="EditProducts.supplierID.$error">
+                        <div ng-message="number">Supplier ID must be a number</div>
+                        <div ng-message="range">Supplier ID must be between 200 and 0</div>
                     </li>
                 </ul>
             </div>
@@ -34,37 +38,37 @@
                 </div>
                 <div class="form-group">
                     <label for="quantityPerUnit">Quantity Per Unit</label>
-                    <input type="text" class="form-control" name="quantityPerUnit" placeholder="Quantity Per Unit" ng-model="product.quantityPerUnit" required />
+                    <input type="text" class="form-control" name="quantityPerUnit" placeholder="Quantity Per Unit" ng-model="product.quantityPerUnit" />
                 </div>
                 <div class="form-group">
                     <label for="unitPrice">Unit Price</label>
-                    <input type="number" class="form-control" name="unitPrice" placeholder="Unit Price" ng-model="product.unitPrice" required />
+                    <input type="number" class="form-control" name="unitPrice" placeholder="Unit Price" ng-model="product.unitPrice" />
                 </div>
                 <div class="form-group">
                     <label for="unitsInStock">Units In Stock</label>
-                    <input type="number" class="form-control" name="unitsInStock" placeholder="Units In Stock" ng-model="product.unitsInStock" required />
+                    <input type="number" class="form-control" name="unitsInStock" placeholder="Units In Stock" ng-model="product.unitsInStock" />
                 </div>
                 <div class="form-group">
                     <label for="unitsOnOrder">Units On Order</label>
-                    <input type="number" class="form-control" name="unitsOnOrder" placeholder="Units On Order" ng-model="product.unitsOnOrder" required/>
+                    <input type="number" class="form-control" name="unitsOnOrder" placeholder="Units On Order" ng-model="product.unitsOnOrder"/>
                 </div>
                 <div class="form-group">
                     <label for="reorderLevel">Reorder Level</label>
-                    <input type="number" class="form-control" name="reorderLevel" placeholder="Reorder Level" ng-model="product.reorderLevel" required/>
+                    <input type="number" class="form-control" name="reorderLevel" placeholder="Reorder Level" ng-model="product.reorderLevel"/>
                 </div>
                 <div class="radio">
                 <label>
-                    <input type="radio" name="discontinued" name="isDiscontinued" value="true" ng-model="product.discontinued" />
+                    <input type="radio" name="discontinued" name="isDiscontinued" ng-value="true" ng-model="product.discontinued" />
                     This product has been discontinued
                 </label>
                 </div>
                 <div class="radio">
                 <label>
-                    <input type="radio" name="discontinued" name="isNotDiscontinued" value="false" ng-model="product.discontinued" checked />
+                    <input type="radio" name="discontinued" name="isNotDiscontinued" ng-value="false" ng-model="product.discontinued" checked />
                     This product is stil active
                 </label>
                 </div>
-                <button type="submit" class="btn btn-primary pull-right" ng-click="save()" ng-disabled="EditProducts.$invalid">Submit</button>
+                <button type="submit" class="btn btn-primary pull-right" ng-click="save()" ng-submit ng-disabled="EditProducts.$invalid && EditProducts.$submitted">Submit</button>
                 <button type="submit" class="btn btn-danger" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
                  <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
             </form>
