Couple optimization changs

--- a/src/Filters/Solutions/Simple/index.html
+++ b/src/Filters/Solutions/Simple/index.html
@@ -12,8 +12,8 @@
         <h2>Filter By:</h2>
         <ul>
             <li>By Name: <input type="text" ng-model="filter.Name" /></li>
-            <li>By League: <input type="number" ng-model="filter.League" /></li>
-            <li>By Division: <input type="number" ng-model="filter.Division" /></li>
+            <li>By League: <input type="text" ng-model="filter.League" /></li>
+            <li>By Division: <input type="text" ng-model="filter.Division" /></li>
         </ul>
         
         <!-- 
