--- a/src/Filters/Samples/FilterObject/index.html
+++ b/src/Filters/Samples/FilterObject/index.html
@@ -7,16 +7,16 @@
         <h1>Filter Controller</h1>
         <h2>Filter By:</h2>
         <ul>
-            <li>By Name: <input type="text" ng-model="filter.Name" /></li>
-            <li>By Age: <input type="number" ng-model="filter.Age" /></li>
-            <li>By Gender:  <input type="radio" ng-model="filter.Gender" name="female" id="female" value="Female" />
+            <li>By Name: <input type="text" ng-model="criteria.Name" /></li>
+            <li>By Age: <input type="number" ng-model="criteria.Age" /></li>
+            <li>By Gender:  <input type="radio" ng-model="criteria.Gender" name="female" id="female" value="Female" />
                             <label for="female">Female</label>
-                            <input type="radio" ng-model="filter.Gender" name="male" id="male" value="Male" />
+                            <input type="radio" ng-model="criteria.Gender" name="male" id="male" value="Male" />
                             <label for="male">Male</label></li>
         </ul>
 
         <input type="button" ng-click="filter = {}" value="Clear" />
-                
+
         <h2>Records</h2>
         <table>
             <thead>
@@ -27,7 +27,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="one in people | filter:filter">
+                <tr ng-repeat="one in people | filter:criteria">
                     <td>{{one.Name}}</td>
                     <td>{{one.Age}}</td>
                     <td>{{one.Gender}}</td>
