--- a/src/HTTP/Solutions/Basic/index.html
+++ b/src/HTTP/Solutions/Basic/index.html
@@ -4,12 +4,12 @@
         <title>First HTTP</title>
     </head>
     <body ng-controller="MainController">
-        
-        <h1>States</h1>
+
+        <h1>Products</h1>
         <ul>
             <li ng-repeat="product in products">{{product.productName}}</li>
         </ul>
-        
+
         <script src="/common/js/angular/angular.js"></script>
         <script src="controllers.js"></script>
     </body>
