--- a/src/HTTP/Solutions/Caching/pages/list.html
+++ b/src/HTTP/Solutions/Caching/pages/list.html
@@ -1,4 +1,4 @@
-<h2>List of People</h2>
+<h2>List of Products</h2>
 <input type="button" ng-click="clearCache()" value="Clear All Cached" />
 <ul>
     <li ng-repeat="product in products"><a href ng-click="selectProduct(product)">{{product.productName}}</a></li>
