--- a/src/Directives/Samples/Simple/index.html
+++ b/src/Directives/Samples/Simple/index.html
@@ -5,8 +5,8 @@
     </head>
     <body ng-controller="HomeController">
         <h1>Directives</h1>
-        
-        <first-one></first-one>
+
+        <first-one>hhhhhhhh</first-one>
         <br />
         <second-one></second-one> <!-- This does not render -->
         <br />
@@ -22,7 +22,7 @@
         <br />
         <fifth-one></fifth-one>
         <br />
-        
+
         <script src="/common/js/angular/angular.js"></script>
         <script src="directives/directives.js"></script>
         <script src="controllers.js"></script>
