--- a/src/Filters/Samples/Basics/index.html
+++ b/src/Filters/Samples/Basics/index.html
@@ -25,7 +25,7 @@
             </tbody>
         </table>
 
-        <h4 ng-show="simpleFilter">Table is being filtered by: {{simpleFilter}}</h4>
+        <h4 ng-show="criteria">Table is being filtered by: {{criteria}}</h4>
 
         <script src="/common/js/angular/angular.js"></script>
         <script src="controllers.js"></script>
