--- a/src/Filters/Samples/FilterObject/index.html
+++ b/src/Filters/Samples/FilterObject/index.html
@@ -15,7 +15,7 @@
                             <label for="male">Male</label></li>
         </ul>
 
-        <input type="button" ng-click="filter = {}" value="Clear" />
+        <input type="button" ng-click="criteria = {}" value="Clear" />
 
         <h2>Records</h2>
         <table>
