Adjustments to course

--- a/src/Routing/Samples/UIRouter/pages/search.html
+++ b/src/Routing/Samples/UIRouter/pages/search.html
@@ -18,8 +18,9 @@
                     <label for="desc">Desc</label></li>
 </ul>
 
-<a ui-sref=".list" >Search </a>
+<a ui-sref=".list">Search </a>
+<a ui-sref=".alt" >Alt-Search</a>
 
 <div ui-view style="border:red solid 2pt">
-    
+
 </div>
