--- a/src/Routing/Samples/UIRouter/pages/list.html
+++ b/src/Routing/Samples/UIRouter/pages/list.html
@@ -1,7 +1,8 @@
 <h2>List of People</h2>
 <ul>
-    <li ng-repeat="one in people | filter:filter | orderBy:sortDirection"><a ui-sref=".detail({id:one.Id})">{{one.Name}}</a></li>
+    <!--<li ng-repeat="one in people | filter:filter | orderBy:sortDirection"><a ui-sref=".detail({id:one.Id})">{{one.Name}}</a></li>-->
+    <li ng-repeat="one in people | filter:filter | orderBy:sortDirection"><a href ng-click="select(one.Id)">{{one.Name}}</a></li>
 </ul>
 
-<div ui-view style="border:green solid 2pt">
+<div ui-view style="border:green solid 2pt" ng-if="isSelected">
 </div>
