--- a/src/Forms/Samples/Validation/pages/detail.html
+++ b/src/Forms/Samples/Validation/pages/detail.html
@@ -1,4 +1,4 @@
- <form-state form="EditStates"></form-state>
+<form-state form="EditStates"></form-state>
 
 <div class="container">
     <div class="row">
@@ -53,9 +53,9 @@
                     Does Not Observe DST
                 </label>
                 </div>
-                <button type="submit" class="btn btn-primary pull-right" ng-click="save()" >Submit</button>
-                <button type="submit" class="btn btn-danger" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
-                 <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
+                <button type="submit" adp-button="primary" class="pull-right" ng-click="save()" >Submit</button>
+                <button type="button" adp-button="link" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
+                <button type="button" adp-button="secondary" ng-click="go('/')">Cancel</button>
             </form>
         </div>
     </div>
