--- a/src/Forms/Exercises/Validation/pages/detail.html
+++ b/src/Forms/Exercises/Validation/pages/detail.html
@@ -15,7 +15,16 @@
         };
         
      You should make certain that the submit button is disabled until all of the fields are valid
---> 
+-->
+<div class="top-nav">
+    <div class="row no-margin">
+        <!-- Side Menu Toggle -->
+        <a id="side-toggle" class="visible-sm-block visible-xs-block" data-ng-click="toggleMenu()">
+            <i class="fa fa-bars"></i>
+        </a>
+            <span class="header-text-style">{{product._id ? 'Editing "' + product.productName + '"' : "Create New Product"}}</span>
+    </div>
+</div>
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">  
@@ -62,12 +71,14 @@
                 <div class="radio">
                 <label>
                     <input type="radio" name="discontinued" id="isNotDiscontinued" value="false" ng-model="product.discontinued">
-                    This product is stil active
+                    This product is still active
                 </label>
                 </div>
-                <button type="submit" class="btn btn-primary pull-right" ng-click="save()">Submit</button>
-                <button type="submit" class="btn btn-danger" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
-                 <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
+                <div class="btn-container">
+                    <button type="button" class="btn btn-danger pull-right" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
+                    <button type="submit" adp-button="primary" ng-click="save()">Submit</button>
+                    <button type="button" adp-button="secondary" ng-click="go('/')">Cancel</button>
+                </div>
             </form>
         </div>
     </div>
