--- a/src/Forms/Exercises/Validation/pages/list.html
+++ b/src/Forms/Exercises/Validation/pages/list.html
@@ -1,24 +1,38 @@
-<div class="container-fluid">
- <div class="row">
-        <div class="col-md-4">
-            <h2>List of Products</h2>
-        </div>
+<!-- Navigation -->
+<div class="top-nav">
+    <div class="row no-margin">
+        <!-- Side Menu Toggle -->
+        <a id="side-toggle" class="visible-sm-block visible-xs-block" data-ng-click="toggleMenu()">
+            <i class="fa fa-bars"></i>
+        </a>
+        <span class="header-text-style">List of Products</span>
     </div>
-    <div class="row">
-        <div class="col-md-8">
+</div>
+<!-- Page Container-->
+<div class="page-content container-fluid">
+    <div class="content">
+        <div class="container-fluid" ui-view autoscroll="false">
             <form class="form-inline">
-                <div class="form-group">
-                    <div class="input-group">
-                        <div class="input-group-addon">Search by Name</div>
-                        <input type="text" class="form-control" placeholder="Filter By Product" ng-model="filter.productName" />
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <label>Search by Name</label>
+                                <input type="text" class="form-control" placeholder="Filter By Product" ng-model="filter.productName" />
+                            </div>
+                            <div class="btn-container">
+                                <button type="button" adp-button="secondary" ng-click="filter = {}">Clear</button>
+                                <button type="button" adp-button="primary" ng-click="go('/details/')">Create New</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <input type="button" class="btn btn-default" ng-click="filter = {}" value="Clear" /> 
-                <input type="button" class="btn btn-primary" ng-click="go('/details/')" value="Create New" /> 
             </form>
+            <div adp-dashboard>
+                <div class="isotope-three-column-width"></div>
+                <div class="isotope-three-column-gutter"></div>
+                <adp-tile data-ng-repeat="product in products | filter:filter | orderBy: 'productName' track by product._id" title="{{product.productName}}" id="{{product._id}}" show="true" order="product.productName" url="pages/productTile.tpl.html"></adp-tile>
+            </div>
         </div>
-    </div>    
-    <div class="row">
-        <div class="col-md-3" ng-repeat="product in products | filter:filter | orderBy:'productName'"><a href ng-click="selectProduct(product)">{{product.productName}}</a></div>
     </div>
 </div>
