Forms/Solutions/Validation

--- a/src/Forms/Exercises/Validation/index.html
+++ b/src/Forms/Exercises/Validation/index.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html ng-app="productApp">
 <head>
-    <title>States App</title>
+    <title>Product App</title>
     <!-- Redbox Specific CSS -->
     <script src="/common/redbox/vendor/js/less.min.js"></script>
     <link href="/common/redbox/vendor/css/vendor.min.css" rel="stylesheet" type="text/css">
