--- a/src/Forms/Samples/ModelOptions/pages/detail.html
+++ b/src/Forms/Samples/ModelOptions/pages/detail.html
@@ -56,9 +56,10 @@
                     Does Not Observe DST
                 </label>
                 </div>
-                <button type="submit" class="btn btn-primary pull-right" ng-click="save()">Submit</button>
-                <button type="submit" class="btn btn-danger" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
-                 <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
+
+                <button type="submit" adp-button="primary" class="pull-right" ng-click="save()" >Submit</button>
+                <button type="button" adp-button="link" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
+                <button type="button" adp-button="secondary" ng-click="go('/')">Cancel</button>
             </form>
         </div>
     </div>
