--- a/src/Forms/Exercises/NgModelOptions/pages/detail.html
+++ b/src/Forms/Exercises/NgModelOptions/pages/detail.html
@@ -1,3 +1,12 @@
+<div class="top-nav">
+    <div class="row no-margin">
+        <!-- Side Menu Toggle -->
+        <a id="side-toggle" class="visible-sm-block visible-xs-block" data-ng-click="toggleMenu()">
+            <i class="fa fa-bars"></i>
+        </a>
+        <span class="header-text-style">{{product._id ? 'Editing "' + product.productName + '"' : "Create New Product"}}</span>
+    </div>
+</div>
 <div class="container">
     
     <div class="row">
@@ -49,9 +58,11 @@
                     This product is stil active
                 </label>
                 </div>
-                <button type="submit" class="btn btn-primary pull-right" ng-click="save()">Submit</button>
-                <button type="submit" class="btn btn-danger" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
-                 <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
+                <div class="btn-container">
+                    <button type="button" class="btn btn-danger pull-right" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
+                    <button type="submit" adp-button="primary" ng-click="save()">Submit</button>
+                    <button type="button" adp-button="secondary" ng-click="go('/')">Cancel</button>
+                </div>
             </form>
         </div>
     </div>
