--- a/src/Forms/Solutions/Validation/index.html
+++ b/src/Forms/Solutions/Validation/index.html
@@ -8,24 +8,23 @@
     <link href="/common/redbox/redbox/css/redbox.min.css" rel="stylesheet" type="text/css">
     <link href="/common/redbox/vendor/css/brandable.less" rel="stylesheet/less" type="text/less">
     <link href="/common/redbox/training.css" rel="stylesheet" type="text/css">
+    <style>
+        input.ng-invalid.ng-dirty {
+            border-color: red;
+        }
+    </style>
 </head>
 
 <body>
 
 <div class="stage show">
     <div>
-        <div class="cover animate">
-            <div class="company-logo"></div>
-            <div data-ng-if="!appCtrl.inOnboarding()" class="icon adp-fa-icon-adp-logo powered-by-adp-logo" onclick="window.open('http://www.adp.com')" title="Powered By ADP"></div>
-        </div>
         <div class="top-header-ribbon visible-xs visible-sm visible-md"></div>
         <div class="overlay"></div>
         <div class="slidein-boundary"></div>
 
         <div id="framework-container" class="container framework-container animate">
-            <!-- Sidebar -->
             <div class="page-sidebar nav vertical animate">
-                <!-- Menu -->
                 <ul class="menu">
                     <li></li>
                     <li>
@@ -37,10 +36,7 @@
                 </ul>
             </div>
 
-            <!-- Page Container -->
-            <div class="page-container animate" ng-controller="AppController" ng-view>
-
-            </div>
+            <div class="page-container animate" ng-controller="AppController" ng-view></div>
         </div>
     </div>
 </div>
