--- a/src/Controllers/Exercises/Options/index.html
+++ b/src/Controllers/Exercises/Options/index.html
@@ -3,7 +3,7 @@
      <head>
         <title>Repeater</title>
     </head>
-    <body ng-controller="ListController">
+    <body ng-controller="ListController as ListCtrl">
         <h1>View Teams</h1>        
         
         <h2>Select a team</h2>
