--- a/src/Directives/Exercises/Requires/index.html
+++ b/src/Directives/Exercises/Requires/index.html
@@ -4,7 +4,7 @@
         <title>Require Directives</title>
         <link href="/common/css/bootstrap/bootstrap.css" type="text/css" rel="stylesheet"/>
     </head>
-    <body ng-controller="HomeController">
+    <body ng-controller="HomeController as HomeCtrl">
         <h1>Directives</h1>
 
         <!-- 
