--- a/src/Controllers/Samples/NgClick/index.html
+++ b/src/Controllers/Samples/NgClick/index.html
@@ -3,7 +3,7 @@
      <head>
         <title>Event Handlers</title>
     </head>
-    <body ng-controller="MainController">
+    <body ng-controller="MainController as MainCtrl">
         <h1>Event Handlers</h1>
 
 
@@ -18,29 +18,29 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="one in people">
+                <tr ng-repeat="one in MainCtrl.people">
                     <td>{{one.Name}}</td>
                     <td>{{one.Age}}</td>
                     <td>{{one.Gender}}</td>
-                    <td><input type="button" value="X" ng-click="remove(one, $event)" /></td>
+                    <td><input type="button" value="X" ng-click="MainCtrl.remove(one, $event)" /></td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <td><input type="text" ng-model="addPerson.Name" ng-focus="handleEvent($event)" ng-blur="handleEvent($event)"/></td>
-                    <td><input type="number" ng-model="addPerson.Age" ng-focus="handleEvent($event)" ng-blur="handleEvent($event)"/></td>
+                    <td><input type="text" ng-model="addPerson.Name" ng-focus="MainCtrl.handleEvent($event)" ng-blur="MainCtrl.handleEvent($event)"/></td>
+                    <td><input type="number" ng-model="addPerson.Age" ng-focus="MainCtrl.handleEvent($event)" ng-blur="MainCtrl.handleEvent($event)"/></td>
                     <td><input type="radio" name="gender" id="female" value="Female" ng-model="addPerson.Gender" ng-focus="handleEvent($event)" ng-blur="handleEvent($event)"/>
                         <label for="female">Female</label><br />
                         <input type="radio" name="gender" id="male" value="Male" ng-model="addPerson.Gender" ng-focus="handleEvent($event)" ng-blur="handleEvent($event)"/>
                         <label for="male">Male</label>
                     </td>
-                    <td><input type="button" value="+" ng-click="add($event)" /></td>
+                    <td><input type="button" value="+" ng-click="MainCtrl.add($event)" /></td>
                 </tr>
             </tfoot>
         </table>
 
         <div>
-            <h2>Last Event Performed:</h2>{{lastEvent}}
+            <h2>Last Event Performed:</h2>{{MainCtrl.lastEvent}}
         </div>
 
         <script src="/common/js/angular/angular.js"></script>
