--- a/src/Controllers/Solutions/Repeater/index.html
+++ b/src/Controllers/Solutions/Repeater/index.html
@@ -12,7 +12,7 @@
      <head>
         <title>Repeater</title>
     </head>
-    <body ng-controller="ListController">
+    <body ng-controller="ListController as ListCtrl">
         <h1>My Teams</h1>
         <table>
             <thead>
@@ -26,7 +26,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="team in teams">
+                <tr ng-repeat="team in ListCtrl.teams">
                     <td>{{team.Name}}</td>
                     <td>{{team.League}}</td>
                     <td>{{team.Division}}</td>
