Controller As Migration Part 2

--- a/src/Directives/Exercises/Validators/index.html
+++ b/src/Directives/Exercises/Validators/index.html
@@ -9,7 +9,7 @@
             }    
         </style>
     </head>
-    <body ng-controller="AppController" ng-view>
+    <body ng-controller="AppController as AppCtrl" ng-view>
          
         <script src="/common/js/angular/angular.js"></script>
         <script src="/common/js/angular-route/angular-route.js"></script>
