--- a/src/Directives/Exercises/Variables/index.html
+++ b/src/Directives/Exercises/Variables/index.html
@@ -3,7 +3,7 @@
      <head>
         <title>Simple Directives</title>
     </head>
-    <body ng-controller="HomeController">
+    <body ng-controller="HomeController As HomeCtrl">
         <h1>Directives</h1>
 
         <!-- add a timer to increment the ticks -->
