--- a/src/Directives/Samples/Transclusion/index.html
+++ b/src/Directives/Samples/Transclusion/index.html
@@ -4,23 +4,23 @@
         <title>Transclude Directives</title>
         <link href="/common/css/bootstrap/bootstrap.css" type="text/css" rel="stylesheet"/>
     </head>
-    <body ng-controller="HomeController">
+    <body ng-controller="HomeController as HomeCtrl">
         <h1>Directives</h1>
 
 
         
         <div class="container-fluid">
             <div class="row">
-                <pane header="people[0].Name">
+                <pane header="HomeCtrl.people[0].Name">
                     <ul>
-                        <li><b>Name:</b> {{people[0].Name}}</li>
-                        <li><b>Age:</b> {{people[0].Age}}</li>
-                        <li><b>Gender:</b> {{people[0].Gender}}</li>
+                        <li><b>Name:</b> {{HomeCtrl.people[0].Name}}</li>
+                        <li><b>Age:</b> {{HomeCtrl.people[0].Age}}</li>
+                        <li><b>Gender:</b> {{HomeCtrl.people[0].Gender}}</li>
                     </ul>
                 </pane>
             </div>
             <div class="row">
-                <pane header="person.Name" ng-repeat="person in people">
+                <pane header="person.Name" ng-repeat="person in HomeCtrl.people">
                     <ul>
                         <li><b>Name:</b> {{person.Name}}</li>
                         <li><b>Age:</b> {{person.Age}}</li>
