--- a/src/Directives/Exercises/Validators/pages/list.html
+++ b/src/Directives/Exercises/Validators/pages/list.html
@@ -16,11 +16,11 @@
                     </div>
                 </div>
                 <input type="button" class="btn btn-default" ng-click="filter = {}" value="Clear" /> 
-                <input type="button" class="btn btn-primary" ng-click="go('/details/')" value="Create New" /> 
+                <input type="button" class="btn btn-primary" ng-click="AppCtrl.go('/details/')" value="Create New" />
             </form>
         </div>
     </div>    
     <div class="row">
-        <div class="col-md-3" ng-repeat="product in products | filter:filter | orderBy:'productName'"><a href ng-click="selectProduct(product)">{{product.productName}}</a></div>
+        <div class="col-md-3" ng-repeat="product in ListCtrl.products | filter:filter | orderBy:'productName'"><a href ng-click="ListCtrl.selectProduct(product)">{{product.productName}}</a></div>
     </div>
 </div>
