--- a/src/Directives/Samples/Validators/pages/detail.html
+++ b/src/Directives/Samples/Validators/pages/detail.html
@@ -42,55 +42,55 @@
             <form name="EditStates" novalidate>
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" class="form-control" name="name" placeholder="State Name" ng-model="state.name" required />
+                    <input type="text" class="form-control" name="name" placeholder="State Name" ng-model="DetailCtrl.state.name" required />
                 </div>
                 <div class="form-group">
                     <label for="abbreviation">Abbreviation</label>
-                    <input type="text" class="form-control" name="abbreviation" placeholder="State Abbreviation" ng-model="state.abbreviation" ng-model-options="{updateOn:'change'}" check-abbreviation required ng-maxlength="2" ng-minlength="2"/>
+                    <input type="text" class="form-control" name="abbreviation" placeholder="State Abbreviation" ng-model="DetailCtrl.state.abbreviation" ng-model-options="{updateOn:'change'}" check-abbreviation required ng-maxlength="2" ng-minlength="2"/>
                 </div>
                 <div class="form-group">
                     <label for="capital">Capital</label>
-                    <input type="text" class="form-control" name="capital" placeholder="Capital" ng-model="state.capital" required/>
+                    <input type="text" class="form-control" name="capital" placeholder="Capital" ng-model="DetailCtrl.state.capital" required/>
                 </div>
                 <div class="form-group">
                     <label for="mostPopulousCity">Most Populous City</label>
-                    <input type="text" class="form-control" name="mostPopulousCity" placeholder="Most Populous City" ng-model="state.mostPopulousCity" required />
+                    <input type="text" class="form-control" name="mostPopulousCity" placeholder="Most Populous City" ng-model="DetailCtrl.state.mostPopulousCity" required />
                 </div>
                 <div class="form-group">
                     <label for="population">Population</label>
-                    <input type="number" class="form-control" name="population" placeholder="Population" ng-model="state.population" required positive-integer />
+                    <input type="number" class="form-control" name="population" placeholder="Population" ng-model="DetailCtrl.state.population" required positive-integer />
                 </div>
                 <div class="form-group">
                     <label for="squareMiles">Square Miles</label>
-                    <input type="number" class="form-control" name="squareMiles" placeholder="Square Miles" ng-model="state.squareMiles" required positive-integer range upper="2000000" lower="100" />
+                    <input type="number" class="form-control" name="squareMiles" placeholder="Square Miles" ng-model="DetailCtrl.state.squareMiles" required positive-integer range upper="2000000" lower="100" />
                 </div>
                 <div class="form-group">
                     <label for="timeZone1">Time Zone 1</label>
-                    <input type="text" class="form-control" name="timeZone1" placeholder="Time Zone 1" ng-model="state.timeZone1" required/>
+                    <input type="text" class="form-control" name="timeZone1" placeholder="Time Zone 1" ng-model="DetailCtrl.state.timeZone1" required/>
                 </div>
                 <div class="form-group">
                     <label for="timeZone1">Time Zone 2</label>
-                    <input type="text" class="form-control" name="timeZone2" placeholder="Time Zone 2" ng-model="state.timeZone2" />
+                    <input type="text" class="form-control" name="timeZone2" placeholder="Time Zone 2" ng-model="DetailCtrl.state.timeZone2" />
                 </div>
                 <div class="form-group">
                     <label for="countryCode">Country Code</label>
-                    <input type="text" class="form-control" name="countryCode" placeholder="Country Code" ng-model="state.countryCode" required ng-minlength="3" ng-maxlength="3" />
+                    <input type="text" class="form-control" name="countryCode" placeholder="Country Code" ng-model="DetailCtrl.state.countryCode" required ng-minlength="3" ng-maxlength="3" />
                 </div>
                 <div class="radio">
                 <label>
-                    <input type="radio" name="dst" id="doesDST" value="YES" ng-model="state.dst" checked>
+                    <input type="radio" name="dst" id="doesDST" value="YES" ng-model="DetailCtrl.state.dst" checked>
                     Does Observe DST
                 </label>
                 </div>
                 <div class="radio">
                 <label>
-                    <input type="radio" name="dst" id="doesNotDST" value="NO" ng-model="state.dst">
+                    <input type="radio" name="dst" id="doesNotDST" value="NO" ng-model="DetailCtrl.state.dst">
                     Does Not Observe DST
                 </label>
                 </div>
-                <button type="submit" class="btn btn-primary pull-right" ng-submit ng-click="save()" ng-disabled="EditStates.$submitted && EditStates.$invalid">Submit</button>
-                <button type="submit" class="btn btn-danger" ng-click="delete()" ng-disabled="!isUpdating">Delete</button>
-                 <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
+                <button type="submit" class="btn btn-primary pull-right" ng-submit ng-click="DetailCtrl.save()" ng-disabled="EditStates.$submitted && EditStates.$invalid">Submit</button>
+                <button type="submit" class="btn btn-danger" ng-click="DetailCtrl.delete()" ng-disabled="!DetailCtrl.isUpdating">Delete</button>
+                <button type="submit" class="btn btn-default" ng-click="go('/')">Cancel</button>
             </form>
         </div>
     </div>
